--- a/Kaolin.Services.PassRzdRu.RailClient/Kaolin.Services.PassRzdRu.RailClient.csproj
+++ b/Kaolin.Services.PassRzdRu.RailClient/Kaolin.Services.PassRzdRu.RailClient.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Kaolin.Models.Rail\Kaolin.Models.Rail.csproj" />
     <ProjectReference Include="..\Kaolin.Services.PassRzdRu.Parser\Kaolin.Services.PassRzdRu.Parser.csproj" />
   </ItemGroup>
 
