added SearchTrainsAsync rail client request

--- a/Kaolin.Models.Rail/Kaolin.Models.Rail.csproj
+++ b/Kaolin.Models.Rail/Kaolin.Models.Rail.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kaolin.Infrastructure.SessionStore\Kaolin.Infrastructure.SessionStore.csproj" />
+  </ItemGroup>
+
 </Project>
