--- a/Clients/HermesSpa/appsettings.json
+++ b/Clients/HermesSpa/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "KaolinApi": {
+    "Rail": {
+      "BaseUrl": "http://localhost:55101"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
