--- a/Clients/HermesSpa/package.json
+++ b/Clients/HermesSpa/package.json
@@ -57,6 +57,7 @@
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.12",
+    "font-awesome": "4.7.0"
   }
 }
