[+] Authentication : Configured DevelopmentUser, added AuthorizeAttribute

--- a/Clients/HermesSpa/appsettings.json
+++ b/Clients/HermesSpa/appsettings.json
@@ -4,6 +4,13 @@
       "BaseUrl": "http://localhost:55101"
     }
   },
+  "Authentication": {
+    "Development": {
+      "Username": "developer",
+      "Password": "gfhjkm123",
+      "Role": "Developer"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
