[+] DbContexts : created OasisDbContext on SqlServerDb with Persons table context

--- a/Traveler/Oasis.Api.Traveler/appsettings.json
+++ b/Traveler/Oasis.Api.Traveler/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "OasisDatabase": {
+    "ConnectionString": "Data Source=(local);Initial Catalog=Oasis;Integrated Security=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
