[*] SecurityAPI Config : added in-memory configurations for Traveler and Rail APIs and HermesSPA Client

--- a/Clients/HermesSpa/Properties/launchSettings.json
+++ b/Clients/HermesSpa/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5102/",
+      "applicationUrl": "http://localhost:5201/",
       "sslPort": 0
     }
   },
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Kaolin.Api.Rail": {
+    "HermesSpa": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5102"
+      "applicationUrl": "http://localhost:5201/"
     }
   }
 }
