--- a/Traveler/Oasis.Api.Traveler/Properties/launchSettings.json
+++ b/Traveler/Oasis.Api.Traveler/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5102/",
+      "applicationUrl": "http://localhost:5101/",
       "sslPort": 0
     }
   },
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Kaolin.Api.Rail": {
+    "Oasis.Api.Traveler": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5102"
+      "applicationUrl": "http://localhost:5101/"
     }
   }
 }
