--- a/Rail/Kaolin.Api.Rail/Kaolin.Api.Rail.csproj
+++ b/Rail/Kaolin.Api.Rail/Kaolin.Api.Rail.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
   </ItemGroup>
 
   <ItemGroup>
