--- a/Clients/HermesSpa/ClientApp/package.json
+++ b/Clients/HermesSpa/ClientApp/package.json
@@ -4,51 +4,52 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --extract-css",
-    "build": "ng build --extract-css",
-    "build:ssr": "npm run build -- --app=ssr --output-hashing=media",
+    "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/platform-server": "^5.2.10",
-    "@angular/router": "^5.2.10",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.8",
+    "@angular/animations": "7.2.0",
+    "@angular/common": "7.2.0",
+    "@angular/compiler": "7.2.0",
+    "@angular/core": "7.2.0",
+    "@angular/forms": "7.2.0",
+    "@angular/platform-browser": "7.2.0",
+    "@angular/platform-browser-dynamic": "7.2.0",
+    "@angular/platform-server": "7.2.0",
+    "@angular/router": "7.2.0",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "aspnet-prerendering": "^3.0.1",
     "jquery": "3.3.1",
     "bootstrap": "^3.3.7",
     "font-awesome": "4.7.0",
-    "core-js": "^2.5.6",
-    "rxjs": "^5.5.8",
-    "zone.js": "^0.8.26"
+    "core-js": "^2.6.2",
+    "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.27"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/language-service": "^5.2.10",
-    "@types/jasmine": "~2.8.7",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.0.9",
-    "codelyzer": "^4.3.0",
-    "jasmine-core": "~3.1.0",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "7.2.1",
+    "@angular/compiler-cli": "7.2.0",
+    "@angular/language-service": "7.2.0",
+    "@types/jasmine": "~3.3.5",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.12.18",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.2",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.1.0",
-    "protractor": "~5.3.2",
-    "ts-node": "~6.0.3",
-    "tslint": "~5.10.0",
-    "typescript": "~2.6.2"
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.12.1",
+    "typescript": "3.2.2"
   }
 }
